--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'jp.wasabeef:glide-transformations:2.0.1'
     implementation 'com.github.ozodrukh:CircularReveal:2.1.0'
-
+    implementation 'com.nineoldandroids:library:2.4.0'
 }
